src/snapshots/lox_rust2__tests__class10.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:
Enjoy your bacon and toast, Dear Reader.

stderr:
