src/snapshots/lox_rust2__tests__class11.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:
Foo instance
Foo instance
Foo instance

stderr:
