src/snapshots/lox_rust2__tests__class12.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:

stderr:
Cannot return a value from an initializer.
