src/snapshots/lox_rust2__tests__class5.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:

stderr:
[line 4] Error at '.': Expected expression
