src/snapshots/lox_rust2__tests__class7.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:

stderr:
[line 3] Error at '.': Expected expression
