src/snapshots/lox_rust2__tests__class9.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:

stderr:
Can't use 'this' outside of a class.
