src/snapshots/lox_rust2__tests__fibonacci.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:
0
1
1
2
3
5
8
13
21
34
55
89
144
233
377
610
987
1597
2584
4181
6765

stderr:
