src/snapshots/lox_rust2__tests__full.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:
3
outside
Enjoy your breakfast, Dear Reader.
Enjoy your breakfast, Noble Reader.

stderr:
