src/snapshots/lox_rust2__tests__inheritance1.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:

stderr:
[line 7] Error at '<': Expected '{' after class name
