src/snapshots/lox_rust2__tests__inheritance2.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:
Fry until golden brown.
Pipe full of custard and coat with chocolate.

stderr:
