src/snapshots/lox_rust2__tests__inheritance3.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:

stderr:
[line 7] Error at '<': Expected '{' after class name
[line 11] Error at 'test': Expected expression
[line 14] Error at '}': Expected expression
[line 16] Error at '<': Expected '{' after class name
